plugins {
    id 'java'
    id 'org.openjfx.javafxplugin' version '0.0.10'
}

group 'LeetCodeJava'
version '1.0-SNAPSHOT'

apply plugin: 'java'
apply plugin: 'checkstyle'

//apply plugin: 'org.junit.platform.gradle.plugin'
sourceCompatibility = 16
targetCompatibility = 16

[compileJava, compileTestJava]*.options.collect { options ->
    options.encoding = 'UTF-8'
    options.compilerArgs << '-Xlint:all'
}

javadoc {
    options.encoding = 'UTF-8'
}
repositories {
    mavenCentral()
}

dependencies {
    testImplementation group: 'junit', name: 'junit', version: '4.12'
}

javafx {
    version = "17"
    modules = [ 'javafx.controls']
}

sourceSets {
    main {
        java {
            srcDirs = ['src/main/java']
        }
    }
    test {
        java {
            srcDirs = ['src/test/java']
        }
    }
}

test {
    testLogging {
        events "passed", "skipped", "failed", "standardOut", "standardError"
    }
}
checkstyle {
    toolVersion = '7.7'
    configFile = file("${project.rootDir}/config/codestyles/intellij-java-google-style.xml")
}
